--- a/VSUQSM/src/app/features/auth/login-layout/login-layout.component.html
+++ b/VSUQSM/src/app/features/auth/login-layout/login-layout.component.html
@@ -1,13 +1,14 @@
 <section class="flex justify-center items-center min-h-screen px-8 py-8 font-bold text-gray-100">
     <div class="flex flex-wrap gap-6 items-center w-full max-w-[1200px] max-md:max-w-full mr-60">
         <div class="flex flex-1 shrink gap-6 items-center self-stretch my-auto text-3xl basis-0 min-w-[200px] max-md:max-w-full max-md:text-2xl">
-            <div class="flex relative flex-col flex-1 shrink items-start self-stretch my-auto w-full basis-0 min-h-[700px] min-w-[200px] max-md:max-w-full max-md:text-2xl">
-                <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/3a637c5136447591cea271236349b473e8383849af095221d2f4b95663de4761?placeholderIfAbsent=true&apiKey=f35c25b17acb406083beeda46a28c843" alt="Background image for login section" class="object-contain absolute right-0 bottom-0 z-0 max-w-full aspect-[1.01] h-[700px] rounded-[30px] w-[700px] mr-36 opacity-90" />
-                <h1 class="flex z-10 flex-col max-w-full rounded-none w-[250px] max-md:text-2xl ml-[70px] mt-1">
-                    <span class="px-12 py-7 bg-gradient-to-r from-[#22381F] to-[#22381F] rounded-[30px_20px_30px_20px] shadow-lg max-md:text-2xl">LOGIN AS</span>
-                </h1>
+            <div class="flex relative flex-col flex-1 shrink items-center self-stretch my-auto w-full basis-0 min-h-[700px] min-w-[200px] max-md:max-w-full max-md:text-2xl">
+                <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/0b8eeef3aa9ed09be06ef82a55f20bd44d4da7a5b047b1702040516075716f09?placeholderIfAbsent=true&apiKey=f35c25b17acb406083beeda46a28c843" alt="Background image for login section" class="object-contain absolute right-0 bottom-0 z-0 max-w-full aspect-[1.01] h-[700px] rounded-[30px] w-[700px] mr-36 opacity-90"/>
+                <h1 class="flex z-10 flex-col max-w-full rounded-none w-[250px] max-md:text-2xl mt-1 transform translate-x-16 ml-60">
+                    <span class="px-12 py-7 bg-gradient-to-r from-[#22381F] to-[#22381F] rounded-[20px_40px_20px_30px] shadow-lg max-md:text-2xl">LOGIN AS</span>
+                </h1>                
             </div>
         </div>
+
         <nav class="flex flex-col self-stretch my-auto text-xl text-center min-w-[200px] w-[250px]">
             <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/99409b5297ea795e5b2369f5493882f0bb3d297e8e2bedba8ff8b89d7d5db5db?placeholderIfAbsent=true&apiKey=f35c25b17acb406083beeda46a28c843" alt="Login options logo" class="object-contain self-center max-w-full aspect-square w-[200px] mb-8" />
             <ul class="flex flex-col mt-14 w-full max-md:mt-6">
