--- a/VSUQSM/src/app/features/desk-attendant-layout/da-contentmanagement/da-contentmanagement.component.html
+++ b/VSUQSM/src/app/features/desk-attendant-layout/da-contentmanagement/da-contentmanagement.component.html
@@ -1,1 +1,219 @@
-<p>da-contentmanagement works!</p>
+<section class="flex flex-row ">
+    <div class="flex flex-wrap gap-11 items-end">
+      <div
+        class="flex flex-wrap grow shrink gap-10 justify-between items-center min-w-[240px] w-[1448px] max-md:max-w-full"
+      >
+        <div class="self-stretch my-auto text-4xl font-bold text-neutral-800">
+          Content Management
+        </div>
+        <div
+          class="flex gap-10 justify-between items-center self-stretch my-auto w-[125px]"
+        >
+          <img
+            loading="lazy"
+            src="https://cdn.builder.io/api/v1/image/assets/TEMP/8c1704d3aab85c2b4268a81ad58febd6429af5a13f39182e24493fbb7f311d02?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7"
+            class="object-contain shrink-0 self-stretch my-auto aspect-[0.83] w-[35px]"
+          />
+          <img
+            loading="lazy"
+            src="https://cdn.builder.io/api/v1/image/assets/TEMP/b8c262a5b72ab0d8b5ea1d8b853f1131d492d94b5504863c2a3a6a97ebf196c9?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7"
+            class="object-contain shrink-0 self-stretch my-auto aspect-square w-[50px]"
+          />
+        </div>
+      </div>
+      <div
+        class="flex grow shrink gap-2.5 items-center min-w-[240px] w-[264px]"
+      >
+        <div
+          class="flex flex-col items-end self-stretch my-auto min-w-[240px] w-[330px]"
+        >
+          <div class="flex gap-1.5 items-center max-w-full w-[330px]">
+            <div class="self-stretch my-auto text-2xl text-black w-[249px]">
+              Logo
+            </div>
+            <label class="inline-flex items-center cursor-pointer">
+              <input type="checkbox" value="" class="sr-only peer" checked>
+              <div class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-lime-900"></div>
+            </label>
+          </div>
+          <div class="relative flex items-center">
+            <input type="text" id="upload-picture" class="pl-4 pr-8 mt-3 w-full text-xl bg-white rounded-xl border border-gray-600 h-[50px] max-w-[330px] text-zinc-400" placeholder="Upload Picture" required />
+            <button class="absolute right-3 top-9 transform -translate-y-1/2 " onclick="alert('Button is clicked!')">
+            <img
+            loading="lazy"
+            src="https://cdn.builder.io/api/v1/image/assets/TEMP/6c07f1684b5044883e1c2439f2fb2544de5434b97baa1a2b0c5d844e480520b4?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7"
+            class="object-contain shrink-0 self-stretch my-auto aspect-square w-[52px]"
+          />
+            </button>
+          </div>
+         
+          <div class="flex gap-1.5 items-center max-w-full w-[330px]">
+            <div class="self-stretch my-auto text-2xl text-black w-[249px]">
+              Video
+            </div>
+            <label class="inline-flex items-center cursor-pointer">
+              <input type="checkbox" value="" class="sr-only peer" checked>
+              <div class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-lime-900"></div>
+            </label>
+          </div>
+          <div class="relative flex items-center">
+            <input type="text" id="upload-video" class="flex gap-2.5 justify-center items-center px-4 mt-3 w-full text-[18px] bg-white rounded-xl border border-gray-600 h-[50px] max-w-[330px] text-zinc-400" placeholder="Video File or YouTube Playlist" required />
+            <button class="absolute right-3 top-9 transform -translate-y-1/2 " onclick="alert('Button is clicked!')">
+            <img
+            loading="lazy"
+            src="https://cdn.builder.io/api/v1/image/assets/TEMP/6c07f1684b5044883e1c2439f2fb2544de5434b97baa1a2b0c5d844e480520b4?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7"
+            class="object-contain shrink-0 self-stretch my-auto aspect-square w-[52px]"
+          />
+            </button>
+          </div>
+
+          
+          
+          <div
+            class="gap-1.5 self-stretch mt-3 max-w-full text-2xl text-black whitespace-nowrap w-[330px]"
+          >
+            Background
+          </div>
+          <div
+            class="flex gap-2.5 justify-center items-center px-4 mt-3 w-full bg-white rounded-xl border border-gray-600 border-solid h-[50px] max-w-[330px]"
+          >
+            <div
+              class="gap-2.5 self-stretch my-auto text-xl text-zinc-400 w-[178px]"
+            >
+              Video, Image, Color
+            </div>
+            <div class="flex gap-2.5 items-center self-stretch p-2.5 my-auto">
+              <img
+                loading="lazy"
+                srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/5be73b26905bc9de3d72b3b3b9e9e9430914f84b589de588abded2cb72fcc1d3?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/5be73b26905bc9de3d72b3b3b9e9e9430914f84b589de588abded2cb72fcc1d3?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/5be73b26905bc9de3d72b3b3b9e9e9430914f84b589de588abded2cb72fcc1d3?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/5be73b26905bc9de3d72b3b3b9e9e9430914f84b589de588abded2cb72fcc1d3?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/5be73b26905bc9de3d72b3b3b9e9e9430914f84b589de588abded2cb72fcc1d3?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/5be73b26905bc9de3d72b3b3b9e9e9430914f84b589de588abded2cb72fcc1d3?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/5be73b26905bc9de3d72b3b3b9e9e9430914f84b589de588abded2cb72fcc1d3?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/5be73b26905bc9de3d72b3b3b9e9e9430914f84b589de588abded2cb72fcc1d3?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7"
+                class="object-contain shrink-0 self-stretch my-auto w-12 aspect-[1.07]"
+              />
+              <img
+                loading="lazy"
+                src="https://cdn.builder.io/api/v1/image/assets/TEMP/6253ab3997bb3c9648bc07867cefb9883335a180c246aa0b583dd850a7722197?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7"
+                class="object-contain shrink-0 self-stretch my-auto w-8 aspect-square shadow-[0px_4px_4px_rgba(0,0,0,0.25)]"
+              />
+            </div>
+          </div>
+          <div class="flex gap-1.5 items-center mt-3 max-w-full w-[330px]">
+            <div class="self-stretch my-auto text-2xl text-black w-[249px]">
+              Announcement
+            </div>
+            <label class="inline-flex items-center cursor-pointer">
+              <input type="checkbox" value="" class="sr-only peer" checked>
+              <div class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-lime-900"></div>
+            </label>
+          </div>
+
+          <div class="flex flex-col mt-3 max-w-full text-xl rounded-xl text-zinc-400 w-[330px]">
+            <input
+              type="text"
+              placeholder="Add announcement"
+              class="px-5 py-2.5 bg-white rounded-xl border border-gray-600 border-solid max-md:pr-5"
+            />
+          </div>
+
+    
+          <div class="flex gap-1.5 items-center mt-3 max-w-full w-[330px]">
+            <div class="self-stretch my-auto text-2xl text-black w-[249px]">
+              Time and Date
+            </div>
+            <div>
+              <label class="inline-flex items-center cursor-pointer">
+                <input type="checkbox" value="" class="sr-only peer" checked>
+                <div class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-lime-900"></div>
+              </label>
+            </div>
+          </div>
+          <div
+            class="flex gap-2.5 justify-center items-center px-4 mt-3 w-full text-xl bg-white rounded-xl border border-gray-600 border-solid h-[50px] max-w-[330px] text-zinc-400"
+          >
+            <div class="gap-2.5 self-stretch my-auto w-[236px]">
+              Select Timezone
+            </div>
+            <img
+              loading="lazy"
+              src="https://cdn.builder.io/api/v1/image/assets/TEMP/680337eff14011904ea3f00fe947267581914a260f3124a5fee9b93ba1887aaa?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7"
+              class="object-contain shrink-0 self-stretch my-auto aspect-square w-[52px]"
+            />
+          </div>
+          <div class="flex gap-1.5 items-center mt-3 max-w-full w-[330px]">
+            <div class="self-stretch my-auto text-2xl text-black w-[249px]">
+              Weather
+            </div>
+           <div>
+            <label class="inline-flex items-center cursor-pointer">
+              <input type="checkbox" value="" class="sr-only peer" checked>
+              <div class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-lime-900"></div>
+            </label>
+           </div>
+          </div>
+          <div
+            class="flex gap-2.5 justify-center items-center px-4 mt-3 w-full text-xl bg-white rounded-xl border border-gray-600 border-solid h-[50px] max-w-[330px] text-zinc-400"
+          >
+            <div class="gap-2.5 self-stretch my-auto w-[236px]">
+              Video File or YouTube Playlist
+            </div>
+            <img
+              loading="lazy"
+              src="https://cdn.builder.io/api/v1/image/assets/TEMP/59015e22914258b4fa51fd56f6c49e783da7c5b0621431759fad19be2d9490ec?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7"
+              class="object-contain shrink-0 self-stretch my-auto aspect-square w-[52px]"
+            />
+          </div>
+          <div class="flex gap-1.5 items-center mt-3 max-w-full w-[330px]">
+            <div class="self-stretch my-auto text-2xl text-black w-[249px]">
+              Currency Converter
+            </div>
+            <div>
+              <label class="inline-flex items-center cursor-pointer">
+                <input type="checkbox" value="" class="sr-only peer" checked>
+                <div class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-lime-900"></div>
+              </label>
+            </div>
+          </div>
+          <div
+            class="flex gap-2.5 justify-center items-center mt-3 max-w-full min-h-[55px] w-[330px]"
+          >
+            <div
+              class="flex flex-col justify-center self-stretch px-4 py-2.5 my-auto text-xl font-medium text-white whitespace-nowrap bg-lime-900 rounded-2xl min-h-[50px] shadow-[0px_4px_4px_rgba(0,0,0,0.25)] w-[95px]"
+            >
+              <div class="flex gap-2 items-center">
+                <div class="self-stretch my-auto">PHP</div>
+                <img
+                  loading="lazy"
+                  src="https://cdn.builder.io/api/v1/image/assets/TEMP/c999a800d5fff5ea10ee3f898df95f260577ca84d38ed627f34beba37b9dfb1e?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7"
+                  class="object-contain shrink-0 self-stretch my-auto w-5 aspect-[2]"
+                />
+              </div>
+            </div>
+            <div
+              class="flex flex-col justify-center self-stretch p-2.5 my-auto w-16"
+            >
+              <img
+                loading="lazy"
+                src="https://cdn.builder.io/api/v1/image/assets/TEMP/496be863cfe779f64a6ca3211c0ad7e20cd50a28d1057d337582e23f40d1fef9?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7"
+                class="object-contain w-11 aspect-[1.26]"
+              />
+            </div>
+            <div
+              class="flex flex-col justify-center self-stretch py-2.5 pr-3.5 pl-4 my-auto text-xl font-medium text-white whitespace-nowrap bg-lime-900 rounded-2xl min-h-[50px] shadow-[0px_4px_4px_rgba(0,0,0,0.25)] w-[95px]"
+            >
+              <div class="flex gap-2 items-center">
+                <div class="self-stretch my-auto">USD</div>
+                <img
+                  loading="lazy"
+                  src="https://cdn.builder.io/api/v1/image/assets/TEMP/ee6e4b3051e53b263d0b77f9c099bc274b57d34bcfdebfb00a3d94de69d46533?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7"
+                  class="object-contain shrink-0 self-stretch my-auto w-5 aspect-[2]"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+      loading="lazy"
+      srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/7b46a8ce2da0d6d81b1451aaea27c3135b6701f12791d517d0144120acee5738?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/7b46a8ce2da0d6d81b1451aaea27c3135b6701f12791d517d0144120acee5738?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/7b46a8ce2da0d6d81b1451aaea27c3135b6701f12791d517d0144120acee5738?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/7b46a8ce2da0d6d81b1451aaea27c3135b6701f12791d517d0144120acee5738?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/7b46a8ce2da0d6d81b1451aaea27c3135b6701f12791d517d0144120acee5738?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/7b46a8ce2da0d6d81b1451aaea27c3135b6701f12791d517d0144120acee5738?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/7b46a8ce2da0d6d81b1451aaea27c3135b6701f12791d517d0144120acee5738?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/7b46a8ce2da0d6d81b1451aaea27c3135b6701f12791d517d0144120acee5738?placeholderIfAbsent=true&apiKey=b3b926d8f2ae4a31b45984938d21b4b7"
+      class="object-contain grow shrink aspect-[1.64] min-w-[240px] w-[1124px] max-md:max-w-full"
+    />
+    </div>
+    </section>
