--- a/VSUQSM/src/app/features/auth/login-layout/login-layout.component.html
+++ b/VSUQSM/src/app/features/auth/login-layout/login-layout.component.html
@@ -12,16 +12,16 @@
         <nav class="flex flex-col self-stretch my-auto text-xl text-center min-w-[200px] w-[250px]">
             <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/99409b5297ea795e5b2369f5493882f0bb3d297e8e2bedba8ff8b89d7d5db5db?placeholderIfAbsent=true&apiKey=f35c25b17acb406083beeda46a28c843" alt="Login options logo" class="object-contain self-center max-w-full aspect-square w-[200px] mb-8" />
             <ul class="flex flex-col mt-14 w-full max-md:mt-6">
-                <li [routerLink]="['/login-as']" class="flex items-center justify-center w-full bg-gradient-to-r from-[#22381F] to-[#22381F] h-[60px] rounded-[20px] shadow-lg transition-transform transform hover:scale-105 mb-4">
+                <li [routerLink]="['/admin/dashboard']" class="flex items-center justify-center w-full bg-gradient-to-r from-[#22381F] to-[#22381F] h-[60px] rounded-[20px] shadow-lg transition-transform transform hover:scale-105 mb-4">
                     <a class="w-full h-full flex items-center justify-center text-gray-100" tabindex="0">Admin</a>
                 </li>
-                <li [routerLink]="['/login-as']" class="flex items-center justify-center w-full bg-gradient-to-r from-[#22381F] to-[#22381F] h-[60px] rounded-[20px] shadow-lg transition-transform transform hover:scale-105 mb-4">
+                <li [routerLink]="['/kiosk-selection']" class="flex items-center justify-center w-full bg-gradient-to-r from-[#22381F] to-[#22381F] h-[60px] rounded-[20px] shadow-lg transition-transform transform hover:scale-105 mb-4">
                     <a class="w-full h-full flex items-center justify-center text-gray-100" tabindex="0">Kiosk</a>
                 </li>
-                <li [routerLink]="['/login-as']" class="flex items-center justify-center w-full bg-gradient-to-r from-[#22381F] to-[#22381F] h-[60px] rounded-[20px] shadow-lg transition-transform transform hover:scale-105 mb-4">
+                <li [routerLink]="['/desk-attendant/dashboard']" class="flex items-center justify-center w-full bg-gradient-to-r from-[#22381F] to-[#22381F] h-[60px] rounded-[20px] shadow-lg transition-transform transform hover:scale-105 mb-4">
                     <a class="w-full h-full flex items-center justify-center text-gray-100" tabindex="0">Desk Attendant</a>
                 </li>
-                <li  [routerLink]="['/login-as']" class="flex items-center justify-center w-full bg-gradient-to-r from-[#22381F] to-[#22381F] h-[60px] rounded-[20px] shadow-lg transition-transform transform hover:scale-105">
+                <li  [routerLink]="['/queueing-selection']" class="flex items-center justify-center w-full bg-gradient-to-r from-[#22381F] to-[#22381F] h-[60px] rounded-[20px] shadow-lg transition-transform transform hover:scale-105">
                     <a class="w-full h-full flex items-center justify-center text-gray-100" tabindex="0">Queue Display</a>
                 </li>
             </ul>
