--- a/VSUQSM/src/app/shared/da-sidebar/da-sidebar.component.html
+++ b/VSUQSM/src/app/shared/da-sidebar/da-sidebar.component.html
@@ -31,6 +31,11 @@
           </a>
         </li>
       </ul>
+      <div class="p-4">
+        <button (click)="logout()" class="w-full py-3 px-4 bg-[#2F4A2C] text-white font-bold rounded-md hover:bg-[#1F3419]">
+          <i class="fas fa-sign-out-alt mr-2"></i> Logout
+        </button>
+      </div>
     </div>
   </div>
   
